updating meta data

--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+        name="description"
+        content="Welcome to MAK Home Remodeling Services' Basement Remodeling Gallery. Finishing your basement is an essential part of turning your house into your dream home. We provide design consultation to help your vision become clear and offer the highest quality service and materials available. We service the lower DC and Southern Maryland area."
+          />
+    <meta 
+        name="keywords"
+        content="mak, M.A.K.,remodeling, services, remodel, construction, basement, basements, finish, finishing, home, maddox"
+          />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/makA.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>MAK Basements</title>
+    <title>MAK Remodeling Services Basement Anex</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
